# MultiModalExplorer

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yaml  docker-compose.yml
.github/workflows/: lint_and_tests.yaml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.data  README.md  pyproject.toml
backend/multimodalexplorer/: config.json  main.py
backend/multimodalexplorer/api/: __init__.py
backend/multimodalexplorer/api/endpoints/: __init__.py  embeddings.py  search.py
backend/multimodalexplorer/functions/: create_faiss_index.py  fetch_embed.py  helpers.py  process_dataset.py  reduce_embed_dims.py  search_faiss_index.py
backend/multimodalexplorer/types/: data_types.py  route_types.py
backend/multimodalexplorer/utils/: helpers.py  utils.py
frontend/: .eslintrc.cjs  Dockerfile.ui  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  custom.d.ts  index.css  main.tsx  utils.ts  vite-env.d.ts
frontend/src/actions/: index.ts
frontend/src/actions/api/: embedding.ts  search.ts
frontend/src/components/: EmbeddingDetails.tsx  ErrorAlert.tsx  Footer.tsx  Loader.tsx  Navbar.tsx  RenderEmbeddings.tsx  Scatterplot.tsx  Searchbar.tsx  index.ts
frontend/src/hooks/: useApi.tsx  useClickOutside.tsx  useDebounce.tsx
frontend/src/layouts/: PageLayout.tsx
frontend/src/navigation/: router.tsx
frontend/src/pages/: Home.tsx
frontend/src/providers/: ContextProvider.tsx
frontend/src/types/: embedding.types.ts  search.types.ts
tests/: test_headers.py
